# Visualized-GTest-Platform

./: README.md
GTest-Framework/tests/: CMakeLists.txt
GTest-Framework/tests/ModuleATest/: CMakeLists.txt  ModuleATest.cpp
GTest-Framework/tests/ModuleBTest/: CMakeLists.txt  ModuleBTest.cpp  StringUtilBasicTest.cpp
